--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -26,5 +26,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:263524329195:ios:dcd965debae6008ae0c0ae</string>
+	<key>DATABASE_URL</key>
+	<string>https://device-app-b6686-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
