--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   firebase_core: ^3.4.0
   permission_handler: ^11.3.1
+  flutter_background_service: ^5.0.10
 
 dev_dependencies:
   flutter_test:
