--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,23 @@
             android:permission="android.permission.FOREGROUND_SERVICE"
             android:foregroundServiceType="location" />
 
+        <receiver android:name=".AppInstalledReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED"/>
+                <action android:name="android.intent.action.PACKAGE_REMOVED"/>
+                <data android:scheme="package"/>
+            </intent-filter>
+        </receiver>
+
+
+        <service android:name=".AppEventService"
+            android:exported="true"
+            android:enabled="true"
+            android:stopWithTask="false"
+            android:permission="android.permission.FOREGROUND_SERVICE"
+            android:foregroundServiceType="location" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
