--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_core: ^3.4.0
   permission_handler: ^11.3.1
   flutter_background_service: ^5.0.10
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
