--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
+    }
+    dependencies {
+        classpath 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1'
+    }
+}
+
 allprojects {
     repositories {
         google()
