--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   permission_handler: ^11.3.1
   flutter_background_service: ^5.0.10
   intl: ^0.19.0
+  geolocator: ^13.0.1
+  google_maps_flutter: ^2.9.0
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
