sửa lỗi map trên iphone và thiết lập phạm vi an toàn cho trẻ

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   geolocator: ^13.0.1
   google_maps_flutter: ^2.9.0
   geocoding: ^3.0.0
+  custom_info_window: ^1.0.1
 
 dev_dependencies:
   flutter_test:
