--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,12 @@ dependencies:
   google_maps_flutter: ^2.9.0
   geocoding: ^3.0.0
   custom_info_window: ^1.0.1
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
