--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
     <uses-permission android:name="android.permission.BIND_DEVICE_ADMIN"
         tools:ignore="ProtectedPermissions" />
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE"/>
+
+
     <application
         android:label="Device App"
         android:icon="@mipmap/ic_launcher"
@@ -38,21 +41,23 @@
             </intent-filter>
         </receiver>
 
+        <!-- chạy nền dùng plugin của flutter-->
         <service
             android:name="id.flutter.flutter_background_service.BackgroundService"
             android:permission="android.permission.FOREGROUND_SERVICE"
             android:foregroundServiceType="location" />
 
-
-        <service android:name="com.hao.device_app.AppEventService"
+        <!--chạy nền trong Android-->
+        <service android:name="com.hao.device_app.service.AppEventService"
             android:exported="true"
             android:enabled="true"
             android:stopWithTask="false"
             android:permission="android.permission.FOREGROUND_SERVICE"
             android:foregroundServiceType="location" />
+
         <!--dịch vụ trợ năng-->
         <service
-            android:name="com.hao.device_app.MyAccessibilityService"
+            android:name="com.hao.device_app.service.MyAccessibilityService"
             android:exported="true"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
@@ -64,8 +69,17 @@
                 android:resource="@xml/accessibility_service_config" />
         </service>
 
+        <service android:name=".service.MyVpnService"
+            android:exported="true"
+            android:permission="android.permission.BIND_VPN_SERVICE">
+            <intent-filter>
+                <action android:name="android.net.VpnService"/>
+            </intent-filter>
+        </service>
+
+        <!--Quyền quản trị thiết bị-->
         <receiver
-            android:name="com.hao.device_app.MyDeviceAdminReceiver"
+            android:name="com.hao.device_app.receiver.MyDeviceAdminReceiver"
             android:exported="true"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
             <meta-data
@@ -105,6 +119,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
         <!--Key của google map-->
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}"/>
